# DOCXEngineOpenGL

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
res/: 123.mtl  123_smooth.mtl  Radio.mtl
res/GltfModels/: BarDiorama.glb  Face_1.glb  Knight.glb  Knight.gltf  Light.gltf  SceneForRednerDemo.gltf  Train.glb  imgui.ini  mr_elephant_RENDERTEST.glb  portal.glb  sphere.glb
res/skybox/: imgui.ini  river_walk_1_2k.hdr  studio_small_03_4k.hdr
res/textures/SciFiTent/: SceneForRednerDemo.gltf  Tent.mtl  imgui.ini  scifitent.fbx
src/: appConfig.cpp  appConfig.hpp  camera.cpp  camera.h  camera.hpp  cubemap.cpp  cubemap.h  cubemap.hpp  depthBuffer.cpp  depthBuffer.hpp  depthbuffer.h  gltfImIporter.h  gltfImporter.cpp  gltfImporter.hpp  inputManager.cpp  inputManager.hpp  light.h  light.hpp  main.cpp  material.cpp  material.h  material.hpp  mesh.h  model.h  objReader.h  objectManager.h  objectPicking.h  outlinePass.cpp  outlinePass.hpp  pickingBuffer.cpp  pickingBuffer.hpp  pickingPass.cpp  pickingPass.hpp  primitive.cpp  primitive.h  primitive.hpp  renderer.cpp  renderer.hpp  sceneManager.cpp  sceneManager.h  (+12 more)
src/passes/: CMakeLists.txt  FXAAPass.cpp  FXAAPass.hpp  TAAPass.cpp  TAAPass.hpp  cubemap.cpp  cubemap.hpp  deferedPass.cpp  deferedPass.hpp  gBuffer.cpp  gBuffer.hpp  pickingPass.cpp  pickingPass.hpp  postProcessPass.cpp  postProcessPass.hpp  shadowMap.cpp  shadowMap.hpp
src/resources/: CMakeLists.txt  default_imgui.ini  gltfImporter.cpp  gltfImporter.hpp  light.cpp  light.hpp  material.cpp  material.hpp  primitive.cpp  primitive.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/resources/scene/: baker.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  sceneNode.cpp  sceneNode.hpp  transform.hpp  transorm.hpp
src/shaders/: BRDF.glsl  TAA.comp  defered.frag  defered.vert  empty.frag  frag.glsl  fragLight.glsl  fragMultipleLights.glsl  frame.frag  frameDebug.frag  frameRadialBackground.frag  frame_frag.glsl  fxaa.frag  fxaa.vert  gBuffer.frag  gBuffer.vert  light.glsl  multipleLightsPBRSurface.frag  multipleLightsSurface.frag  outline.frag  outline.vert  outlineVert.glsl  picking.frag  picking.vert  postProcess.comp  rand.glsl  selectionBuffer.frag  shadow.glsl  silhouette.frag  simpleDepthShader.vert  vertLight.glsl  vertex.glsl  vertex.vert
src/shaders/cubemap/: background.frag  background.vert  brdfLut.frag  brdfLut.vert  cubemap.frag  equirectangularToCubemap.frag  equirectangularToCubemap.vert  irradianceConvolution.frag  specularConvolution.frag
